--- a/eda.rmd
+++ b/eda.rmd
@@ -5,6 +5,7 @@ author: "Kathi Woitas, kathi.woitas@ub.unibe.ch"
 date: "2020-09-02"
 output: 
   html_document:
+    keep_md: yes
     toc: true
     smart: true
     number_section: true
